--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dev Jangid | To-Do List</title>
 
-	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="./main.css" />
 </head>
 <body>
 	
@@ -22,25 +22,10 @@
 			<h2 style="color: rgb(255, 255, 255); font-weight: bolder; font-size:30px;">Tasks List</h2>
 
 			<div id="tasks">
-
-				<!-- <div class="task">
-					<div class="content">
-						<input 
-							type="text" 
-							class="text" 
-							value="A new task"
-							readonly>
-					</div>
-					<div class="actions">
-						<button class="edit">Edit</button>
-						<button class="delete">Delete</button>
-					</div>
-				</div> -->
-
 			</div>
 		</section>
 	</main>
 
-	<script src="main.js"></script>
+	<script src="./main.js"></script>
 </body>
 </html>
